compiler/src/main/antlr4/.antlr/datalogParser.java
// Generated from datalog.g4 by ANTLR 4.9.2
package compiler;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class datalogParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, QUERY_MARKER=9, 
		BODY_HEAD_SEPARATOR=10, SLC=11, MLC_START=12, MLC_END=13, EOL=14, NOT=15, 
		BUILT_IN=16, UPPER=17, LOWER=18, NUMBER=19, WS=20, COMMENT=21, MULTILINE_COMMENT=22;
	public static final int
		RULE_program = 0, RULE_query = 1, RULE_normal_built_in_predicate = 2, 
		RULE_negative_built_in_predicate = 3, RULE_built_in_predicate = 4, RULE_parameter = 5, 
		RULE_normal_predicate = 6, RULE_negative_predicate = 7, RULE_predicate = 8, 
		RULE_clause = 9, RULE_definition = 10, RULE_term_tuple = 11, RULE_term = 12, 
		RULE_name = 13, RULE_function = 14, RULE_variable = 15;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "query", "normal_built_in_predicate", "negative_built_in_predicate", 
			"built_in_predicate", "parameter", "normal_predicate", "negative_predicate", 
			"predicate", "clause", "definition", "term_tuple", "term", "name", "function", 
			"variable"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "','", "'['", "']'", "'{'", "'}'", "'_'", "'?-'", 
			"':-'", "'%'", "'/*'", "'*/'", "'.'", "'\\+'", "'$'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, "QUERY_MARKER", 
			"BODY_HEAD_SEPARATOR", "SLC", "MLC_START", "MLC_END", "EOL", "NOT", "BUILT_IN", 
			"UPPER", "LOWER", "NUMBER", "WS", "COMMENT", "MULTILINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "datalog.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public datalogParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public QueryContext query() {
			return getRuleContext(QueryContext.class,0);
		}
		public List<ClauseContext> clause() {
			return getRuleContexts(ClauseContext.class);
		}
		public ClauseContext clause(int i) {
			return getRuleContext(ClauseContext.class,i);
		}
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datalogVisitor ) return ((datalogVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LOWER) {
				{
				setState(34);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
				case 1:
					{
					setState(32);
					clause();
					}
					break;
				case 2:
					{
					setState(33);
					definition();
					}
					break;
				}
				}
				setState(38);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(39);
			query();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QueryContext extends ParserRuleContext {
		public TerminalNode QUERY_MARKER() { return getToken(datalogParser.QUERY_MARKER, 0); }
		public TerminalNode EOL() { return getToken(datalogParser.EOL, 0); }
		public Normal_predicateContext normal_predicate() {
			return getRuleContext(Normal_predicateContext.class,0);
		}
		public Normal_built_in_predicateContext normal_built_in_predicate() {
			return getRuleContext(Normal_built_in_predicateContext.class,0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_query; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).enterQuery(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).exitQuery(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datalogVisitor ) return ((datalogVisitor<? extends T>)visitor).visitQuery(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QueryContext query() throws RecognitionException {
		QueryContext _localctx = new QueryContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_query);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(41);
			match(QUERY_MARKER);
			setState(44);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LOWER:
				{
				setState(42);
				normal_predicate();
				}
				break;
			case BUILT_IN:
				{
				setState(43);
				normal_built_in_predicate();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(46);
			match(EOL);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Normal_built_in_predicateContext extends ParserRuleContext {
		public TerminalNode BUILT_IN() { return getToken(datalogParser.BUILT_IN, 0); }
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public Normal_built_in_predicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_normal_built_in_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).enterNormal_built_in_predicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).exitNormal_built_in_predicate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datalogVisitor ) return ((datalogVisitor<? extends T>)visitor).visitNormal_built_in_predicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Normal_built_in_predicateContext normal_built_in_predicate() throws RecognitionException {
		Normal_built_in_predicateContext _localctx = new Normal_built_in_predicateContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_normal_built_in_predicate);
		int _la;
		try {
			setState(66);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(48);
				match(BUILT_IN);
				setState(49);
				name();
				setState(50);
				match(T__0);
				setState(51);
				match(T__1);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(53);
				match(BUILT_IN);
				setState(54);
				name();
				setState(55);
				match(T__0);
				setState(56);
				parameter();
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(57);
					match(T__2);
					setState(58);
					parameter();
					}
					}
					setState(63);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(64);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Negative_built_in_predicateContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(datalogParser.NOT, 0); }
		public Normal_built_in_predicateContext normal_built_in_predicate() {
			return getRuleContext(Normal_built_in_predicateContext.class,0);
		}
		public Negative_built_in_predicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_negative_built_in_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).enterNegative_built_in_predicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).exitNegative_built_in_predicate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datalogVisitor ) return ((datalogVisitor<? extends T>)visitor).visitNegative_built_in_predicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Negative_built_in_predicateContext negative_built_in_predicate() throws RecognitionException {
		Negative_built_in_predicateContext _localctx = new Negative_built_in_predicateContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_negative_built_in_predicate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(68);
			match(NOT);
			setState(69);
			normal_built_in_predicate();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Built_in_predicateContext extends ParserRuleContext {
		public Normal_built_in_predicateContext normal_built_in_predicate() {
			return getRuleContext(Normal_built_in_predicateContext.class,0);
		}
		public Negative_built_in_predicateContext negative_built_in_predicate() {
			return getRuleContext(Negative_built_in_predicateContext.class,0);
		}
		public Built_in_predicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_built_in_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).enterBuilt_in_predicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).exitBuilt_in_predicate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datalogVisitor ) return ((datalogVisitor<? extends T>)visitor).visitBuilt_in_predicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Built_in_predicateContext built_in_predicate() throws RecognitionException {
		Built_in_predicateContext _localctx = new Built_in_predicateContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_built_in_predicate);
		try {
			setState(73);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BUILT_IN:
				enterOuterAlt(_localctx, 1);
				{
				setState(71);
				normal_built_in_predicate();
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(72);
				negative_built_in_predicate();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public Normal_predicateContext normal_predicate() {
			return getRuleContext(Normal_predicateContext.class,0);
		}
		public Normal_built_in_predicateContext normal_built_in_predicate() {
			return getRuleContext(Normal_built_in_predicateContext.class,0);
		}
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).exitParameter(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datalogVisitor ) return ((datalogVisitor<? extends T>)visitor).visitParameter(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_parameter);
		int _la;
		try {
			setState(91);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(75);
				match(T__3);
				setState(76);
				match(T__4);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(77);
				match(T__3);
				setState(78);
				parameter();
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(79);
					match(T__2);
					setState(80);
					parameter();
					}
					}
					setState(85);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(86);
				match(T__4);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(88);
				normal_predicate();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(89);
				normal_built_in_predicate();
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(90);
				term();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Normal_predicateContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public Normal_predicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_normal_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).enterNormal_predicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).exitNormal_predicate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datalogVisitor ) return ((datalogVisitor<? extends T>)visitor).visitNormal_predicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Normal_predicateContext normal_predicate() throws RecognitionException {
		Normal_predicateContext _localctx = new Normal_predicateContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_normal_predicate);
		int _la;
		try {
			setState(109);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,9,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(93);
				name();
				setState(94);
				match(T__0);
				setState(95);
				match(T__1);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(97);
				name();
				setState(98);
				match(T__0);
				setState(99);
				term();
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(100);
					match(T__2);
					setState(101);
					term();
					}
					}
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(107);
				match(T__1);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Negative_predicateContext extends ParserRuleContext {
		public TerminalNode NOT() { return getToken(datalogParser.NOT, 0); }
		public Normal_predicateContext normal_predicate() {
			return getRuleContext(Normal_predicateContext.class,0);
		}
		public Negative_predicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_negative_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).enterNegative_predicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).exitNegative_predicate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datalogVisitor ) return ((datalogVisitor<? extends T>)visitor).visitNegative_predicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Negative_predicateContext negative_predicate() throws RecognitionException {
		Negative_predicateContext _localctx = new Negative_predicateContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_negative_predicate);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(111);
			match(NOT);
			setState(112);
			normal_predicate();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PredicateContext extends ParserRuleContext {
		public Normal_predicateContext normal_predicate() {
			return getRuleContext(Normal_predicateContext.class,0);
		}
		public Negative_predicateContext negative_predicate() {
			return getRuleContext(Negative_predicateContext.class,0);
		}
		public PredicateContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_predicate; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).enterPredicate(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).exitPredicate(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datalogVisitor ) return ((datalogVisitor<? extends T>)visitor).visitPredicate(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PredicateContext predicate() throws RecognitionException {
		PredicateContext _localctx = new PredicateContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_predicate);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LOWER:
				enterOuterAlt(_localctx, 1);
				{
				setState(114);
				normal_predicate();
				}
				break;
			case NOT:
				enterOuterAlt(_localctx, 2);
				{
				setState(115);
				negative_predicate();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ClauseContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode BODY_HEAD_SEPARATOR() { return getToken(datalogParser.BODY_HEAD_SEPARATOR, 0); }
		public TerminalNode EOL() { return getToken(datalogParser.EOL, 0); }
		public List<PredicateContext> predicate() {
			return getRuleContexts(PredicateContext.class);
		}
		public PredicateContext predicate(int i) {
			return getRuleContext(PredicateContext.class,i);
		}
		public List<Built_in_predicateContext> built_in_predicate() {
			return getRuleContexts(Built_in_predicateContext.class);
		}
		public Built_in_predicateContext built_in_predicate(int i) {
			return getRuleContext(Built_in_predicateContext.class,i);
		}
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public ClauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).enterClause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).exitClause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datalogVisitor ) return ((datalogVisitor<? extends T>)visitor).visitClause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ClauseContext clause() throws RecognitionException {
		ClauseContext _localctx = new ClauseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_clause);
		int _la;
		try {
			setState(166);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,18,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(118);
				name();
				setState(119);
				match(T__0);
				setState(120);
				match(T__1);
				setState(121);
				match(BODY_HEAD_SEPARATOR);
				setState(124);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,11,_ctx) ) {
				case 1:
					{
					setState(122);
					predicate();
					}
					break;
				case 2:
					{
					setState(123);
					built_in_predicate();
					}
					break;
				}
				setState(133);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(126);
					match(T__2);
					setState(129);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,12,_ctx) ) {
					case 1:
						{
						setState(127);
						predicate();
						}
						break;
					case 2:
						{
						setState(128);
						built_in_predicate();
						}
						break;
					}
					}
					}
					setState(135);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(136);
				match(EOL);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(138);
				name();
				setState(139);
				match(T__0);
				setState(140);
				term();
				setState(145);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(141);
					match(T__2);
					setState(142);
					term();
					}
					}
					setState(147);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(148);
				match(T__1);
				setState(149);
				match(BODY_HEAD_SEPARATOR);
				setState(152);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,15,_ctx) ) {
				case 1:
					{
					setState(150);
					predicate();
					}
					break;
				case 2:
					{
					setState(151);
					built_in_predicate();
					}
					break;
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(154);
					match(T__2);
					setState(157);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,16,_ctx) ) {
					case 1:
						{
						setState(155);
						predicate();
						}
						break;
					case 2:
						{
						setState(156);
						built_in_predicate();
						}
						break;
					}
					}
					}
					setState(163);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(164);
				match(EOL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefinitionContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode BODY_HEAD_SEPARATOR() { return getToken(datalogParser.BODY_HEAD_SEPARATOR, 0); }
		public TerminalNode EOL() { return getToken(datalogParser.EOL, 0); }
		public List<Term_tupleContext> term_tuple() {
			return getRuleContexts(Term_tupleContext.class);
		}
		public Term_tupleContext term_tuple(int i) {
			return getRuleContext(Term_tupleContext.class,i);
		}
		public DefinitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).enterDefinition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).exitDefinition(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datalogVisitor ) return ((datalogVisitor<? extends T>)visitor).visitDefinition(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DefinitionContext definition() throws RecognitionException {
		DefinitionContext _localctx = new DefinitionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_definition);
		int _la;
		try {
			setState(188);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,20,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(168);
				name();
				setState(169);
				match(BODY_HEAD_SEPARATOR);
				setState(170);
				match(T__5);
				setState(171);
				match(T__6);
				setState(172);
				match(EOL);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(174);
				name();
				setState(175);
				match(BODY_HEAD_SEPARATOR);
				setState(176);
				match(T__5);
				setState(177);
				term_tuple();
				setState(182);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__2) {
					{
					{
					setState(178);
					match(T__2);
					setState(179);
					term_tuple();
					}
					}
					setState(184);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(185);
				match(T__6);
				setState(186);
				match(EOL);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Term_tupleContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public Term_tupleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term_tuple; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).enterTerm_tuple(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof datalogListener ) ((datalogListener)listener).exitTerm_tuple(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof datalogVisitor ) return ((datalogVisitor<? extends T>)visitor).visitTerm_tuple(this);
			else return visitor.visitChildren(this);
		}
	}
